# lantern

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: native-linux.yml
apps/lantern-native-linux/: Cargo.toml
apps/lantern-native-linux/packaging/: check-deps.sh  install-bundle.sh  install.sh  package.sh  sh.lantern.NativeLinux.desktop.in  sh.lantern.NativeLinux.metainfo.xml  uninstall.sh  verify-bundle.sh
apps/lantern-native-linux/src/: app.rs  main.rs  terminal_host.rs  theme.rs
crates/lantern-core/: Cargo.toml
crates/lantern-core/src/: config.rs  db.rs  error.rs  git.rs  lib.rs  models.rs  paths.rs  workspace.rs
docs/: DESIGN.md  native-terminal-rewrite.md  native-ui-redesign.md
scripts/: desktop-build.sh  desktop-dev.sh  desktop-install.sh  desktop-uninstall.sh
src/: App.test.tsx  App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  db.rs  error.rs  git.rs  lib.rs  main.rs  paths.rs  pty.rs  state.rs
src-tauri/src/commands/: config.rs  layout.rs  mod.rs  pty_io.rs  repo.rs  terminal.rs
src/components/: AppShell.module.css  AppShell.tsx  TitleBar.module.css  TitleBar.test.tsx  TitleBar.tsx
src/hooks/: useAgentDetector.ts  useGitPoller.ts  useRepoGroups.test.ts  useRepoGroups.ts  useShortcuts.ts  useSidebarResize.ts  useTheme.ts  useUiScale.ts
src/lib/: tauriCommands.test.ts  tauriCommands.ts  terminalManager.test.ts  terminalManager.ts  theme.ts
src/stores/: appStore.test.ts  appStore.ts
src/styles/: global.css  theme.css
(+41 files in other folders)
