[package]
name = "lantern"
version = "0.1.0"
edition = "2021"
description = "Terminal workspace manager"

[lib]
name = "lantern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
git2 = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
dirs = "5"

[dev-dependencies]
tempfile = "3"
